--- a/package.json
+++ b/package.json
@@ -33,22 +33,23 @@
     "@types/node-fetch": "^2.5.0",
     "chai": "^4.2.0",
     "husky": "^3.0.0",
-    "rimraf": "^2.6.2",
     "mocha": "^6.1.4",
     "prettier": "^1.19.1",
     "pretty-quick": "^1.11.1",
+    "rimraf": "^2.6.2",
     "tslint": "^5.20.1",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "ts-node": "^8.5.4",
-    "node-fetch": "^2.6.0",
+    "cd": "^0.3.3",
+    "deep-freeze": "^0.0.1",
     "lodash": "^4.17.14",
+    "node-fetch": "^2.6.0",
     "node-worker-threads-pool": "^1.2.2",
     "promise-tools": "^2.1.0",
-    "winston": "^3.2.1",
-    "deep-freeze": "^0.0.1"
+    "ts-node": "^8.5.4",
+    "winston": "^3.2.1"
   },
   "prettier": {
     "printWidth": 100,
