--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@overturebio-stack/lectern-client",
-  "version": "1.5.0",
+  "name": "@ferlab/lectern-client",
+  "version": "1.5.1",
   "files": [
     "lib/**/*"
   ],
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/overture-stack/js-lectern-client.git"
+    "url": "git+https://github.com/Ferlab-Ste-Justine/js-lectern-client.git"
   },
   "publishConfig": {
     "access": "public"
