--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -20,7 +20,20 @@ jobs:
           git tag $current_version
           git push --tags
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.19.1'
+      - name: Install dependencies and build
+        run: |
+          npm i
+          npm run build
+
   publish-to-npm:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -28,10 +41,6 @@ jobs:
         with:
           node-version: '18.19.1'
           registry-url: 'https://registry.npmjs.org'
-      - name: Install dependencies and build
-        run: |
-          npm i
-          npm run build
       - name: Publish to NPM
         run: |
           current_version=next@$(node -p -e "require('./package.json').version")
