--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           current_version=next@$(node -p -e "require('./package.json').version")
+          echo "List of tags:"
+          git tag -l
           if [[ $(git tag -l "$current_version") ]]; then
             echo "Exit if tag already exists"
             exit 0
