--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -34,6 +34,11 @@ jobs:
         run: |
           npm i
           npm run build
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lib
+          path: ./lib
 
   publish-to-npm:
     needs: build
@@ -44,6 +49,11 @@ jobs:
         with:
           node-version: '18.19.1'
           registry-url: 'https://registry.npmjs.org'
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: lib
+          path: ./lib
       - name: Publish to NPM
         run: |
           current_version=next@$(node -p -e "require('./package.json').version")
