--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,11 +10,10 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
-      - run: |
+      - id: tag
+        run: |
           current_version=next@$(node -p -e "require('./package.json').version")
           git fetch --tags
-          echo "List of tags:"
-          git tag -l
           if [[ $(git tag -l "$current_version") ]]; then
             echo "Exit if tag already exists"
             exit 0
@@ -22,8 +21,13 @@ jobs:
           echo "creating tag $current_version"
           git tag $current_version
           git push --tags
+          echo "proceed=true" >> $GITHUB_OUTPUT
+    outputs:
+      proceed: ${{ steps.tag.outputs.proceed }}
 
   build:
+    needs: create-tag
+    if: ${{ needs.create-tag.outputs.proceed == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -57,8 +61,6 @@ jobs:
       - name: Publish to NPM
         run: |
           current_version=next@$(node -p -e "require('./package.json').version")
-          # exit if tag already exists
-          [[ $(git tag -l "$current_version") ]] && exit 0
           echo "Publishing stable release $current_version"
           npm publish --dry-run
         env:
